--- a/src/front/styles/inventory.css
+++ b/src/front/styles/inventory.css
@@ -1,6 +1,20 @@
 .parent {
   margin-top: 50px;
-  width: 90%;
   display: flex;
   align-content: center;
+}
+
+.accordion {
+  display: flex;
+  flex-direction: column;
+  margin-left: 25%;
+  width: 888px;
+}
+
+.list-group-item {
+  display: flex;
+}
+
+.input-group {
+  margin-left: 75%;
 }
