--- a/src/front/styles/inventory.css
+++ b/src/front/styles/inventory.css
@@ -22,6 +22,11 @@
 .link {
   display: flex;
   position: relative;
+  left: 444px;
   top: 10px;
   flex-direction: column;
+}
+
+.icon{
+  margin-top: 31px;
 }
